fixed text visibility over header gradient + add scroll on press show more

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   position: absolute;
   width: 68vw;
   background: linear-gradient(180deg, rgba(255,255,255,1) 50%, rgba(0,212,255,0) 100%);
+  z-index: 1;
 }
 
 .main-div {
